--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -86,11 +86,9 @@
                                     </td>
                                     <td>
                                         <% if(data.status=='active' ){ %>
-                                            <button class="btn btn-primary"><a class="text-dark"
-                                                    href="/status/categorie/<%= data._id %>/inactive">Desactivar</a></button>
+                                            <button class="btn btn-primary" onclick="changeStatus('<%= data._id %>', 'inactive')">Desactivar</button>
                                             <%} else {%>
-                                                <button class="btn btn-primary"><a class="text-dark"
-                                                        href="/status/categorie/<%= data._id %>/active">Activar</a></button>
+                                                <button class="btn btn-primary" onclick="changeStatus('<%= data._id %>', 'active')">Activar</button>
                                                 <% } %>
                                     </td>
                                     <td>
