--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -11,7 +11,7 @@
                         <div class="d-flex flex-row">
                             <div class="col-8">
                                 <canvas id="myCanvas"
-                                    style="background-image: url(http://localhost:443/images/<%= products.image[0] %>); background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;"></canvas>
+                                    style="background-image: url('http://localhost:443/images/<%= products.image[0] %>'); background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;"></canvas>
                             </div>
                             <div class="col-4 my-3">
                                 <div class="row mb-2">
