--- a/views/account.ejs
+++ b/views/account.ejs
@@ -15,14 +15,13 @@
                             placeholder="" required name="lastname">
                     </div>
                     <div class="col-4">
-                        <label for="username" class="form-label ">Usuario</label>
-                        <input type="text" class="form-control " id="username"
-                            placeholder="" required name="user">
+                        <label for="user-login" class="form-label">Usuario: </label>
+                        <input type="text" id="user-login" class="form-control" required>
                     </div>
                 </div>
                 <div class="row py-2">
                     <div class="col-4">
-                        <label for="email" class="form-label">Correo</label>
+                        <label for="mail" class="form-label">Correo</label>
                         <input type="email" class="form-control " id="mail"
                             placeholder="" required name="email">
                     </div>
@@ -32,9 +31,9 @@
                             placeholder="" required name="document">
                     </div>
                     <div class="col-4">
-                        <label for="password" class="form-label">Clave</label>
-                        <input type="password" class="form-control " id="password"
-                            placeholder="" required name="password">
+                        <label for="password-login" class="form-label">Clave</label>
+                        <input type="password" class="form-control " id="password-login"
+                            placeholder="" required name="password-login">
                     </div>
                 </div>
             </div>
