--- a/views/primeruso.html
+++ b/views/primeruso.html
@@ -1,106 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="container">
+    <main>
+        <div class="text-center">
+            <img class="d-block mx-auto mb-1" src="../images/LOG23-02.png" alt="" width="250" height="230">
+            <h2>Registrate</h2>
+        </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dashbard.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
+        <div class="col-md-7 col-lg-8 mx-auto">
+            <h4 class="mb-3">Datos personales</h4>
+            <form class="needs-validation" novalidate="" id="form-user">
+                <div class="row g-3">
+                    <div class="col-sm-6">
+                        <label for="" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" name="name" id="name" required>
+                    </div>
 
-<body class="bg-body-tertiary ">
-    <div class="container">
-        <main>
-            <div class="text-center">
-                <img class="d-block mx-auto mb-1" src="../images/LOG23-02.png" alt="" width="250"
-                    height="230">
-                <h2>Registrate</h2>
-            </div>
+                    <div class="col-sm-6">
+                        <label for="" class="form-label">Apellido</label>
+                        <input type="text" class="form-control" name="lastname" id="lastname" required>
+                    </div>
 
-            <div class="col-md-7 col-lg-8 mx-auto">
-                <h4 class="mb-3">Datos personales</h4>
-                <form class="needs-validation" novalidate="" id="form-user">
-                    <div class="row g-3">
-                        <div class="col-sm-6">
-                            <label for="" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" name="name" id="name" required>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <label for="" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" name="lastname" id="lastname" required>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="" class="form-label">Usuario</label>
-                            <div class="input-group has-validation">
-                                <input type="text" class="form-control" id="username-account" name="username" required>
-                            </div>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="email" class="form-label">Correo</label>
-                            <input type="email" class="form-control" id="mail" name="mail"
-                                placeholder="correo@ejemplo.com" required>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="number" class="form-label">DUI</label>
-                            <input type="number" class="form-control" id="documento" name="document"
-                                placeholder="111111-1" required>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="password-account" name="password" required>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="password" class="form-label">Confirmar contraseña</label>
-                            <input type="password" class="form-control" id="confirm" name="password2" required>
-                        </div>
-
-                        <div class="col-12 visually-hidden">
-                            <label for="admin" class="form-label">Rol</label>
-                            <input type="text" class="form-control" value="admin" id="rol" name="rol" readonly required>
-                        </div>
-                        <div class="col-12 visually-hidden">
-                            <label for="admin" class="form-label">Estado</label>
-                            <input type="text" class="form-control" value="activo" id="status" name="status" readonly
-                                required>
-                        </div>
-                        <div class="col12">
-                            <button class="w-25 btn btn-primary btn-sm" type="reset">Vaciar campos</button>
+                    <div class="col-12">
+                        <label for="" class="form-label">Usuario</label>
+                        <div class="input-group has-validation">
+                            <input type="text" class="form-control" id="username-account" name="username" required>
                         </div>
                     </div>
 
-                    <hr class="my-4">
+                    <div class="col-12">
+                        <label for="email" class="form-label">Correo</label>
+                        <input type="email" class="form-control" id="mail" name="mail" placeholder="correo@ejemplo.com"
+                            required>
+                    </div>
 
-                    <button class="w-100 btn btn-primary btn-sm" type="submit">Registrar</button>
-                </form>
-            </div>
-    </div>
-    </main>
+                    <div class="col-12">
+                        <label for="number" class="form-label">DUI</label>
+                        <input type="number" class="form-control" id="document" name="document" placeholder="111111-1"
+                            required>
+                    </div>
 
-    <footer class="my-5 pt-5 text-body-secondary text-center text-small">
-        <p class="mb-1">© 2023 Sublisivarte</p>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Privacidad</a></li>
-            <li class="list-inline-item"><a href="#">Terminos y condiciones</a></li>
-            <li class="list-inline-item"><a href="#">Soporte</a></li>
-        </ul>
-    </footer>
-    </div>
-    <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+                    <div class="col-12">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="password-account" name="password" required>
+                    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+                    <div class="col-12">
+                        <label for="password" class="form-label">Confirmar contraseña</label>
+                        <input type="password" class="form-control" id="confirm" name="password2" required>
+                    </div>
 
-        <script src="/firstUse.js"></script>
-</body>
+                    <div class="col-12 visually-hidden">
+                        <label for="admin" class="form-label">Rol</label>
+                        <input type="text" class="form-control" value="admin" id="role" name="rol" readonly required>
+                    </div>
+                    <div class="col12">
+                        <button class="w-25 btn btn-primary btn-sm" type="reset">Vaciar campos</button>
+                    </div>
+                </div>
 
-</html>
+                <hr class="my-4">
+
+                <button class="w-100 btn btn-primary btn-sm" type="submit">Registrar</button>
+            </form>
+        </div>
+</div>
+</main>
+
+<footer class="my-5 pt-5 text-body-secondary text-center text-small">
+    <p class="mb-1">© 2023 Sublisivarte</p>
+    <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacidad</a></li>
+        <li class="list-inline-item"><a href="#">Terminos y condiciones</a></li>
+        <li class="list-inline-item"><a href="#">Soporte</a></li>
+    </ul>
+</footer>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<input type="text" value="<%= confirmation %>" id="confirmation" hidden>
+<input type="text" value="<%= mensaje %>" id="mensaje" hidden>
+<input type="text" value="<%= icon %>" id="icon" hidden>
+
+<script src="/alerts.js"></script>
+<script src="/firstUse.js"></script>
+<script src="/users.js"></script>
