--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,122 +14,36 @@
 </head>
 
 <body>
-    <% if(user==0) {%>
-        <div class="container">
-            <main>
-                <div class="text-center">
-                    <img class="d-block mx-auto mb-1" src="../images/LOG23-02.png" alt="" width="250" height="230">
-                </div>
-
-                <div class="col-md-7 col-lg-12 mx-auto">
-                    <h4 class="mb-3">Datos personales</h4>
-                    <form class="needs-validation" novalidate="" id="form-user">
-                        <div class="row g-3">
-                            <div class="col-sm-6">
-                                <label for="" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" name="name" id="name" required>
-                            </div>
-
-                            <div class="col-sm-6">
-                                <label for="" class="form-label">Apellido</label>
-                                <input type="text" class="form-control" name="lastname" id="lastname" required>
-                            </div>
-
-                            <div class="col-12">
-                                <label for="" class="form-label">Usuario</label>
-                                <div class="input-group has-validation">
-                                    <input type="text" class="form-control" id="username-account" name="username"
-                                        required>
-                                </div>
-                            </div>
-
-                            <div class="col-12">
-                                <label for="email" class="form-label">Correo</label>
-                                <input type="email" class="form-control" id="mail" name="mail"
-                                    placeholder="correo@ejemplo.com" required>
-                            </div>
-
-                            <div class="col-12">
-                                <label for="number" class="form-label">DUI</label>
-                                <input type="number" class="form-control" id="document" name="document"
-                                    placeholder="111111-1" required>
-                            </div>
-
-                            <div class="col-12">
-                                <label for="password" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="password-account" name="password"
-                                    required>
-                            </div>
-
-                            <div class="col-12">
-                                <label for="password" class="form-label">Confirmar contraseña</label>
-                                <input type="password" class="form-control" id="confirm" name="password2" required>
-                            </div>
-
-                            <div class="col-12 ">
-                                <label for="admin" class="form-label">Rol</label>
-                                <input type="text" class="form-control" value="admin" id="role" name="rol" readonly
-                                    required>
-                            </div>
-                            <div class="col12">
-                                <button class="w-25 btn btn-primary btn-sm" type="reset">Vaciar campos</button>
-                            </div>
-                        </div>
-
-                        <hr class="my-4">
-
-                        <button class="w-100 btn btn-primary btn-sm" type="submit">Registrar</button>
-                    </form>
-                </div>
-        </div>
-        </main>
-
-        </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-        <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
-        <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
-        <input type="text" value="<%= icon %>" id="icon" hidden>
-
-        <script src="/alerts.js"></script>
-        <script src="/firstUse.js"></script>
+    <% if(count != 0) { %>
+        <% if(user !=false) { %>
+            <% if(user.status=='activo' ) {%>
+                <%- include('include/nav') %>
+                <%- body %>
+                <%- include('include/footer') %>
+            <% } else if(user.status=='baneado' ) { %>
+                <%- include('include/error401') %>
+            <% } else { %>
+                <%- include('include/error402') %>
+            <% } %>
         <% } else {%>
-            <% if(user !=false) {%>
-                <% if(user.status=='activo' ) {%>
-                    <%- include('include/nav') %>
-                        <%- body %>
-                            <%- include('include/footer') %>
-                                <% } else if(user.status=='baneado' ) { %>
-                                    <%- include('include/error401') %>
-                                        <% } else { %>
-                                            <%- include('include/error402') %>
-                                                <% } %>
-                                                    <% } else {%>
-                                                        <%- include('include/nav') %>
-                                                            <%- body %>
-                                                                <%- include('include/footer') %>
-                                                                    <% } %>.
-                                                                        <% } %>.
-                                                                            <script
-                                                                                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-                                                                                integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-                                                                                crossorigin="anonymous"></script>
-                                                                            <script type="module"
-                                                                                src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-                                                                            <script nomodule
-                                                                                src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-                                                                            <script
-                                                                                src="https://code.jquery.com/jquery-3.6.4.min.js"
-                                                                                integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-                                                                                crossorigin="anonymous"></script>
-                                                                            <script
-                                                                                src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-                                                                            <script
-                                                                                src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-                                                                            <script src="/nav-login.js"></script>
-                                                                            <script src="/search.js"></script>
+            <%- include('include/nav') %>
+            <%- body %>
+            <%- include('include/footer') %>
+        <% } %>
+    <% } else { %>
+        <%- include('include/firstUse') %>
+    <% } %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/nav-login.js"></script>
+    <script src="/search.js"></script>
 </body>
 
 </html>
