--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -54,11 +54,11 @@
                                                             aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <label for="customRange2"
+                                                        <label for="review"
                                                             class="form-label">Calificacion</label>
                                                         <input type="range" class="form-range" min="0" max="10"
-                                                            id="revire" value="0" name="review" >
-                                                        <textarea name="comment" id="comment" cols="60" rows="5"></textarea>
+                                                            id="review" value="0" name="review" >
+                                                        <textarea name="comment" id="comment" cols="60" rows="5" maxlength="250"></textarea>
                                                         <input type="text" name="client" id="client" value="<%= user.user %>">
                                                         <input type="text" name="product" id="product" value="<%= data.product %>">
                                                     </div>
@@ -79,7 +79,7 @@
         </table>
     </div>
     <div class="row w-25 my-3 ">
-        <% if(status=='en proceso' ){ %>
+        <% if(status=='en proceso' && details.length){ %>
             <button class="btn btn-success w-50" type="submit"><a href="/finish/orders/<%= order %>"
                     class="text-light">Comprar</a></button>
             <% } %>
