--- a/views/comentarios.ejs
+++ b/views/comentarios.ejs
@@ -1,4 +1,4 @@
-<% if(user==false || user.role != 'admin'){ %>
+<% if(user==false || user.role !='admin' ){ %>
     <%- include('include/error') %>
         <% } else { %>
             <div class="container">
@@ -76,31 +76,7 @@
                                         <%= data.client %>
                                     </td>
                                     <td>
-                                        <button type="button" class="btn btn-danger mb-3" data-bs-toggle="modal"
-                                            data-bs-target="#staticBackdrop<%= data._id %>delete">
-                                            Eliminar
-                                        </button>
-                                        <div class="modal fade" id="staticBackdrop<%= data._id %>delete"
-                                            data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                                            aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                            <div class="modal-dialog">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                            aria-label="Close"></button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        ¿Esta seguro que desea eliminar el comentario?
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-primary">
-                                                            <a href="/delete/comments/<%= data._id %>"
-                                                                class="text-light text-decoration-none">Aceptar</a>
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <button type="button" class="btn btn-danger" onclick="confirmDelete('<%= data._id %>')">Eliminar</button>
                                     </td>
                                 </tr>
                                 <% }) %>
@@ -110,14 +86,14 @@
             </div>
             <% } %>
 
-            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-            <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
-            <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
-            <input type="text" value="<%= icon %>" id="icon" hidden>
+                <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
+                <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
+                <input type="text" value="<%= icon %>" id="icon" hidden>
 
-            <script src="/alerts.js"></script>
-            <script src="/search.js"></script>
-            <script src="/comentarios.js"></script>
+                <script src="/alerts.js"></script>
+                <script src="/search.js"></script>
+                <script src="/comentarios.js"></script>
