--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -55,7 +55,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<label for="" class="form-label">Correo:</label>
-												<input type="text" class="form-control" name="email" id="email"
+												<input type="email" class="form-control" name="email" id="email"
 													required />
 											</div>
 											<div class="col-md-5">
