--- a/views/include/lists.ejs
+++ b/views/include/lists.ejs
@@ -79,8 +79,8 @@
                                     <input type="number" name="stock" id="stock" value="<%= products.stock %>" hidden>
                                     <input type="text" name="id" id="id" value="<%= products._id %>" hidden>
                                     <input type="text" name="price" id="price" value="<%= products.price %>" hidden>
-                                    <input type="text" name="product" id="product" value="<%= products.product %>">
-                                    <input type="text" name="order" id="order" value="<%= data._id %>">
+                                    <input type="text" name="product" id="product" value="<%= products.product %>" hidden>
+                                    <input type="text" name="order" id="order" value="<%= data._id %>" hidden>
                                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                                     <button type="submit" class="btn btn-success">Enviar</button>
                                 </div>
