--- a/views/template.html
+++ b/views/template.html
@@ -1,37 +1,45 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dashbard.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body style="background-color: #ffffff;">
-    <div style="position: absolute; top: 20%; left: 40%;">
-        <div style="height: 300px; width: 350px; background-color: #000000; border-radius: 5%;">
-            <div>
-                <h2 style=" color: #4280EF; padding-left: 3%;">¿Has olvidado tu <br> contraseña?
-                    </h2>
+    <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-dark">Ver reseñas</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Reseñas</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div>
-                <h5 style=" color: #ffffff;padding-left: 3%;">Si usted no ha realizado ninguna
-                    peticion de cambio de contraseña puede bloquear su cuenta
-                <br> Codigo de recuperación:</h5>
+            <div class="modal-body ">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Usuario</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Titulo reseña</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe velit sint, doloribus accusamus cum aperiam aut eos modi, exercitationem, maxime ad alias odit aliquam laborum possimus corporis sequi iure soluta?</p>
+                    </div>
+                </div>
             </div>
-            <div style="text-align: center;">
-                <input style="margin: auto; height: 30px; width: 250px;" type="text">
-            </div>
-            <div style="text-align: center; margin-top: 20px;">
-                <button type="button"
-                    style=" color: #ffffff; background-color: #4280EF; border-radius: 5px; height: 30px; width: 250px; border: none;">Cambiar contraseña</button>
-            </div>
-            <footer
-                style="position: fixed-bottom; height: 13%; width: 100%; background-color: #4280EF; text-align: center; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
-                <h5 style="color: #ffffff;">Copyright © 2023 Sublisivarte <br>Contacto: sublisivarte@email.com</h5>
-            </footer>
+          </div>
         </div>
-    </div>
+      </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+        <script>
+            const myModal = new bootstrap.Modal(document.getElementById('exampleModal'));
+          
+            const myButton = document.querySelector('.btn-primary');
+            myButton.addEventListener('click', () => {
+              myModal.show();
+            });
+          </script>
 </body>
 
 </html>
