--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -33,3 +33,4 @@
 <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/login.js"></script>
+<script src="/email.js"></script>
