--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -44,6 +44,32 @@
                                                     width="100"></button>
                                         </div>
                                     </div>
+                                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                        class="btn btn-dark">Ver reseñas</button>
+                                    <div class="modal fade" id="exampleModal" tabindex="-1"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Reseñas</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body ">
+                                                    <div class="card" style="width: 18rem;">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title">
+                                                            </h5>
+                                                            <h6 class="card-subtitle mb-2 text-body-secondary">
+                                                                </h6>
+                                                            <p class="card-text"></p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <% if(orders !=null) {%>
                                     <p class="px-0 mx-0">
